feat(exhibition)：增加展览角色坐标编辑、气泡图片与自然注视。